fix: :hammer: Currently the anchors have a small area to hover over, and flicker on hover because they are discontinuous with the header text

--- a/src/styles/episode.scss
+++ b/src/styles/episode.scss
@@ -178,9 +178,9 @@ table th {
         }
       }
     }
-    .anchor {
+    .anchor { 
       display: block;
-      top: -4px;
+      top: 44px;
       float: left;
       padding-right: 200px;
       position: relative;
@@ -195,6 +195,10 @@ table th {
         transform: scale(1.5);
       }
     }
+  }
+  .anchor {
+    width: 100%;
+    height: 100%;
   }
 }
 @media all and (max-width: 600px) {
